   Suggested by Minion. [GM]
 * dig() now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]
 * convutctime() and convtime(<time>, utc) to convert a timestring to
   # of seconds since UTC. Patch by Minion.
 * powers() with no arguments now returns a list of powers, similar to
   lflags() with no args. [MG]

Minor Changes:
 * The Can_Nspemit @power has been renamed to Can_Spoof, to better reflect
   its uses. Can_Nspemit is still an alias. [MG]
 * Considerable improvement in the speed of functions that sort
   case-insensitively, particularly using 'm' sort (Now default). [GM]
 * Combined fun_setinter, fun_setdiff and fun_setunion into fun_setmanip. [GM]
 * For hardcoders: list2arr and list2arr_ansi now take a third argument
   on whether to include empty items. [GM]
 * page and @mail will report to you if your recipient(s) cannot reply
   to you. Suggested by Paige. [GM]
 * The debug attribute flag now shows more debug info. [MG]
 * @oemit now does better object matching, can match names with spaces when
   enclosed in double quotes, and, when given a <room> but no matching
   objects, shows the message to everyone in the room, instead of noone.
   From a bug reported by Paige. [MG]

Fixes:
 * Fixing list type autodetect. [GM]
 * Help fixes by Daniel Powell. [MG]
 * Connect/disconnect messages for combined channels incorrectly showed
   NOSPOOF data. Reported by Sketch. [MG]
 * The delimiter between combined channel names in @chatformat is now '|'
   instead of ' | ', as documented. Reported by Trinsec. [MG]
 * ansi(h,) now returns absolutely nothing, instead of an ansi-highlighted
   nothing. Fixes a few minor/obscure bugs. [MG]

Version 1.8.4 patchlevel 2                                 Dec 06,  2010

Major Changes:
 * Wildcard matcher completely rewritten to avoid hangs and to provide
   ansi-aware capturing. [GM]
 * connection_fail_limit now lets you limit the # of connection fails in